Fixed bugs for Responsive Design and word-wrap

--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -16,8 +16,20 @@
   border-radius: 5px
 }
 
-@media (max-width: 768px) {
-  header {
+@media only screen and (max-width: 768px) {
+  .body-container {
+    flex-direction: column;
+  }
+  .body-container .headerClass {
+    flex-grow: 1;
+    background: #4056A1;
     margin: 0;
+    margin-top: 120px;
+  }
+  .body-container .container {
+    flex-grow: 1;
+  }
+  main {
+    margin-top: 0;
   }
 }
