--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -33,8 +33,7 @@ textarea {
   margin-top: 0px;
   background-color: #f4f1ec;
   border-width: thick;
-  border-top: none;
-  border-right: none;
+   border-right: none;
   border-left: none;
   height: 50px;
   margin-bottom: 20px;
